<resources>
    <string name="app_name">Degura</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_title">DeGura</string>
    <string name="app_subtitle">"Deteksi Kesegaran Ikan Gurami"</string>
    <string name="app_main_title_eye">Pengambilan Gambar Mata</string>
    <string name="app_main_title_gill">Pengambilan Gambar Insang</string>
    <string name="fish_eye_instruct">Ambil gambar mata ikan melalui</string>
    <string name="fish_gill_instruct">Ambil gambar insang ikan melalui</string>
    <string name="phone_gallery">Galeri</string>
    <string name="phone_camera">Kamera</string>
    <string name="btn_back">Kembali</string>
    <string name="app_detection_title">Hasil Gambar</string>
    <string name="fish_eye_text">Mata Ikan</string>
    <string name="fish_gill_text">Insang Ikan</string>
    <string name="detection_text">Deteksi</string>
    <string name="delete_img_text">Buang Gambar</string>
    <string name="app_result_title">Hasil Prediksi Kesegaran</string>
    <string name="fresh_eye_status">Status Kesegaran Mata:</string>
    <string name="fish_gill_status">Status Kesegaran Insang:</string>
</resources>