<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".view.main.FishEyeFragment">

    <TextView
        android:id="@+id/first_title_page"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/sansation_regular"
        android:text="@string/app_main_title_eye"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/fish_eye_slider"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_title_page" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/transparent_white"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/eye_page1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/transparent_white"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/eye_page2"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/transparent_white"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/eye_page3"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/transparent_white"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/eye_page4"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/transparent_white"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/eye_page5"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/content_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sansation_regular"
            android:text="@string/fish_eye_instruct"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_gallery_eye"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="56dp"
            android:background="@drawable/blue_btn_background"
            android:backgroundTint="@color/degura_blue"
            android:text="@string/phone_gallery"
            android:textSize="16sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/btn_camera_eye"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="72dp"
            android:background="@drawable/blue_btn_background"
            android:backgroundTint="@color/degura_blue"
            android:text="@string/phone_camera"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_gallery_eye" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>